# Tic-Tac-Toe-Game

./: Board.cpp  CMakeLists.txt  LoginDialog.cpp  README.md  mainwindow.cpp  mainwindow.h  test_ai.cpp  test_board.cpp
.github/workflows/: ci.yml
includes/: AIPlayer.h  Board.h
src/: main.cpp
src/APP/: LoginDialog.cpp  mainwindow.cpp
src/Domain/: AIPlayer.cpp  Board.cpp
src/Project/: LoginDialog.cpp  LoginDialog.h  mainwindow.cpp
tests/: test_ai.cpp  test_board.cpp
